# BitTorrent

./: README.md  meson.build
libs/mbtbe/: meson.build
libs/mbtbe/include/mbt/be/: torrent_file.h
libs/mbtbe/src/: be.c  get.c
libs/mbtfile/: meson.build
libs/mbtfile/include/mbt/file/: struct.h
libs/mbtfile/src/: file_handler.c  piece.c
libs/mbtnet/: meson.build
libs/mbtutils/: meson.build
libs/mbtutils/src/: str.c
src/: main.c
